fixed flickering by clearing interval. added seconds back

--- a/src/App.css
+++ b/src/App.css
@@ -4,28 +4,50 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 80px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: left;
+  font-size: 40px;
   color: white;
+}
+
+.header-text {
+  width: 900px;
+  text-align: left;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-.whole-box {
+.page-wrap {
   position: relative;
+  height: 657px;
+  width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+}
+
+.whole-box {
+  position: absolute;
   border: 4px solid black;
   width: 637px;
   height: 637px;
   margin-top: 10px;
-  margin-bottom: 100px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 0px;
+}
+
+.stats {
+  position: absolute;
+  top: 10px;
+  right: 0px;
+  margin-right: 0px;
+  width: 220px;
+  text-align: left;
+}
+
+.stats p {
+  font-size: 30px;
+  line-height: 40px;
 }
 
 .boxes {
